# silence-with-sound

./: Cargo.toml  README.md  build.rs
src/: args.rs  cli.rs  main.rs  source.rs
src/gui/: audio_tab.rs  mod.rs  sws_gui.rs
