[package]
name = "silence-with-sound"
version = "0.1.0"
edition = "2021"

authors = ["Micah Weston <micahsweston@gmail.com>"]
description = "CLI program that plays audio files randomly over time"
repository = "https://github.com/red1bluelost/silence-with-sound"
keywords = ["memes", "audio", "funny"]

license = "CC0-1"

build = "build.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.11", features = ["derive"] }
delegate = "0.11.0"
derive_builder = "0.12.0"
ffmpeg = { version = "6.1.0", package = "ffmpeg-next" }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
humantime = "2.1.0"
rand = "0.8.5"
rodio = { version = "0.17.3", features = ["symphonia-all", "default"] }

[build-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.4"
humantime = "2.1.0"
